--- a/src/scss/_transcriptView.scss
+++ b/src/scss/_transcriptView.scss
@@ -27,15 +27,15 @@
 }
 
 .block[data-layout='right-middle'] {
-	max-width: 350px;
+	max-width: 250px;
 }
 
 .block[data-layout='right-top'] {
-	max-width: 350px;
+	max-width: 250px;
 }
 
 .block[data-layout='right-bottom'] {
-	max-width: 350px;
+	max-width: 250px;
 }
 
 .add {
